<resources>
    <string name="app_name">تقویم فارسی</string>
    <string name="widget_name">تقویم فارسی</string>
    <string name="widget_mini_name">تقویم فارسی (کوچک)</string>
    <string name="latitude">عرض جغرافیایی</string>
    <string name="longitude">طول جغرافیایی</string>
    <string name="settings">تنظیمات</string>
    <string name="exit">خروج</string>
    <string name="enable_persian_digits">نمایش عددها به فارسی</string>
    <string name="persian_digits">عددهای فارسی</string>
    <string name="showing_clock_on_widget">نمایش ساعت در ابزارک</string>
    <string name="clock_on_widget">ساعت در ابزارک</string>
    <string name="showing_clock_in_24"> نمایش ساعت به صورت ۲۴ تایی</string>
    <string name="clock_in_24">۲۴ ساعته</string>
    <string name="about">درباره</string>
    <string name="gpl_logo">نشان پروانهٔ جامع همگانی گنو</string>
    <string name="widget_text_colors">رنگ متن ابزارک</string>
    <string name="clock">ساعت</string>
    <string name="date">تاریخ</string>
    <string name="date_converter">تبدیل تاریخ</string>
    <string name="logo">نشان</string>
    <string name="dari_months">ماه‌های دری</string>
    <string name="enable_dari">فعال کردن ماه‌های دری</string>
    <string name="widget_notification_dashclock">ابزارک، نوار آگاهی و دش‌کلاک</string>
    <string name="general">عمومی</string>
    <string name="widget_text_color">رنگ نوشته‌های ابزارک</string>
    <string name="select_widgets_text_color">انتخاب رنگ دل‌خواه برای نوشته‌های ابزارک</string>
    <string name="pray_times_calculation_setting">تنظیمات محاسبهٔ اوقات شرعی و قبله‌نما</string>
    <string name="notify_date">فعال کردن آگاهی</string>
    <string name="enable_notify">آگاهی همیشگی از تاریخ‌ها، اعمال غیرفعال‌سازی آن نیاز به خاموش و روشن کردن دستگاه دارد</string>
    <string name="select_skin">انتخاب پوسته</string>
    <string name="skin">پوسته</string>
    <string name="pray_methods">شیوه‌های محاسبه</string>
    <string name="pray_methods_calculation">شیوه‌های محاسبهٔ اوقات شرعی</string>
    <string name="altitude">ارتفاع</string>
    <string name="altitude_praytime">به متر (اختیاری)</string>
    <string name="gps_location">دریافت مختصات از جی‌پی‌اس یا شبکه</string>
    <string name="gps_location_help">اگر از این طریق ممکن باشد، به باقی تنظیمات این بخش نیاز نیست</string>
    <string name="location">موقعیت</string>
    <string name="location_help">اگر در فهرست نبود، مختصات را وارد کنید</string>
    <string name="showing_iran_time">نمایش ابزارک‌ها، نوار آگاهی و برنامه به وقت ایران در همه‌جا</string>
    <string name="iran_time">وقت ایران</string>
    <string name="qibla_compass">قطب‌نما/قبله‌نما</string>
    <string name="compass">قطب‌نما</string>
    <string name="compass_not_found">حسگر قطب‌نما پیدا نشد</string>
    <string name="month_names">نام ماه‌ها</string>
    <string name="calendar_font">قلم تقویم</string>
    <string name="application_language">زبان برنامه</string>
    <string name="language">زبان</string>
    <string name="calendar_language">زبان تقویم</string>
    <string name="calendar_language_summary">زبانی که ماه‌ها و روزها به آن نمایش داده می‌شوند</string>
    <string name="version">نگارش</string>
    <string name="calendar_font_summary">تغییر قلم تقویم</string>
    <string name="athan">اذان</string>
    <string name="athan_alarm_summary">برای این نمازها اذان گفته شود</string>
    <string name="athan_alarm">اذان‌ها</string>
    <string name="athan_sound">صدای اذان</string>
    <string name="match_system">تطبیق با سامانه</string>
    <string name="athan_volume_summary">تنظیم حجم صدای اذان</string>
    <string name="athan_volume">حجم صدا</string>
    <string name="tap_to_stop_athan">برای توقف اذان ضربه بزنید</string>
    <string name="playing_athan">در حال پخش اذان</string>
    <string name="athan_disabled_summary">برای فعال کردن تنظیمات اذان، مکانی را از فهرست برگزیده، یا مشخصات موقعیتتان را وارد کنید</string>
    <string name="athan_gap">فاصلهٔ بین اذان واقعی و اذان برنامه</string>
    <string name="athan_gap_summary">چند دقیقه پیش از اذان، هشدار به صدا در آورده شود</string>
    <string name="closeDrawer">بستن</string>
    <string name="openDrawer">گشودن</string>
    <string name="azan1">اذان صبح</string>
    <string name="azan2">اذان ظهر</string>
    <string name="azan3">عصر</string>
    <string name="azan4">اذان مغرب</string>
    <string name="azan5">عشاء</string>
    <string name="aftab1">طلوع آفتاب</string>
    <string name="aftab2">غروب آفتاب</string>
    <string name="aftab3">نیمه‌شب شرعی</string>
    <string name="owghat">اوقات شرعی</string>
    <string name="events">رویداد‌ها</string>
    <string name="today">امروز</string>
    <string name="select_type_date">گزینش گونهٔ تاریخ</string>
    <string name="year">سال</string>
    <string name="mount">ماه</string>
    <string name="day">روز</string>
    <string name="select_year">گزینش سال</string>
    <string name="select_mount">گزینش ماه</string>
    <string name="select_day">گزینش روز</string>
    <string name="date_exception">تاریخ وارد شده اشتباه است!</string>
    <string name="in_city_time">به افق</string>
    <string name="islamic_offset">تنظیم تقویم اسلامی</string>
    <string name="islamic_offset_summary">بازگشت برای اصلاح تقویم</string>
    <string-array name="calendar_type">
        <item>هجری شمسی</item>
        <item>هجری قمری</item>
        <item>میلادی</item>
    </string-array>
    <string name="date_copied_clipboard">به حافظه رونوشت شد</string>
    <string name="stop">توقف</string>
    <string name="goto_date">برو به تاریخ</string>
    <string name="select">انتخاب</string>
    <string name="pleasewaitgps">کمی درنگ کنید… اگر پس از یک دقیقه نتیجه‌ای حاصل نشد احتمالاً باید گزینه‌های دیگر را بیازمایید</string>
    <string name="holidaysIncompletenessWarning">مناسبت‌های این سال در تقویم کامل نیست.</string>
    <string name="shouldBeUpdated">مناسبت‌های تقویم امسال کامل نیست، احتمالاً نیاز به به‌روزرسانی این برنامه، در صورت وجود، دارید.</string>
    <string name="title_fragment_inbox">میز کار</string>
    <string name="title_activity_pick_avatar">انتخاب آواتار</string>
    <string name="title_edit_quest">ویرایش برنامه</string>
    <string name="quest_deleted">برنامه پاک شد</string>
    <string name="repeating_quest_deleted">کار روزانه دوره ای پاک شد</string>
    <string name="done">انجام شد</string>
    <string name="quest_complete">کار روزانه کامل شد</string>
    <string name="quest_complete_with_bounty">کا روزانه کامل شد! +%1$d XP +%2$d امتیاز ها.</string>
    <string name="challenge_complete">چالش %s کامل شد</string>
    <string name="quest_undone">Quest undone. -%1$d XP -%2$d coins.</string>
    <string name="quest_undone_to_inbox">انتقال کار روزانه به میزکار. -%1$d XP -%2$d امتیاز ها.</string>
    <string name="add_quest_name_hint">نام (مثلا نام یک کتاب)</string>
    <string name="start">شروع</string>
    <string name="edit">ویرایش</string>
    <string name="quest_item_full_duration">%1$d ساعت %2$d دقیقه</string>
    <string name="quest_item_minutes_duration">%d دقیقه</string>
    <string name="quest_item_hours_duration">%d ساعت</string>
    <string name="tomorrow">فردا</string>
    <string name="next_7_days">هفت روز آینده</string>
    <string name="cancel">لغو</string>
    <string name="title_fragment_wizard_quest_name">کا روزانه جدید</string>
    <string name="unknown_choice">نمی دانم</string>
    <string name="delete">پاک کردن</string>
    <string name="delete_it">آن را پاک کن</string>
    <string name="dialog_delete_quest_title">کا روزانه را پاک کن</string>
    <string name="dialog_delete_quest_message">آیا مطمئن هستید که می خواهید این کار روزانه پاک شود؟</string>
    <string name="dialog_delete_challenge_title">پاک کردن چالش</string>
    <string name="dialog_delete_challenge_message">آیا مایل هستی که تمام کارهای روزانه مربوط به چالش پاک شود؟</string>
    <string name="inbox">میزکار</string>
    <string name="feedback">بهبود این برنامه</string>
    <string name="contact_us">ارتباط با ما</string>
    <string name="yesterday_calendar_format">\'دیروز - \'d MMM</string>
    <string name="today_calendar_format">\'امروز - \'EEE, d MMM</string>
    <string name="tomorrow_calendar_format">\'فردا - \'d MMM</string>
    <string name="calendar_format">EEE, d MMM</string>
    <string name="agenda_calendar_format">EEEE, d MMM</string>
    <string name="widget_agenda_title_format">EEE, d MMM</string>
    <string name="quest_scheduled_for_today">کار های روزانه برنامه ریزی شده برای امروز</string>
    <string name="quest_scheduled_for_tomorrow">کار های روزانه برنامه ریزی شده برای فردا</string>
    <string name="contact_us_email_chooser_title">ارتباط با ما</string>
    <string name="repeating_quest_saved">کار روزانه دوره ای ذخیره گردید</string>
    <string-array name="growth_intervals">
        <item>امروز</item>
        <item>هفت روز گذشته</item>
        <item>30 روز گذشته</item>
    </string-array>
    <string name="title_activity_main">تقویم</string>
    <string name="save">ذخیره</string>
    <string name="tutorial_welcome_title">*سه قدم ساده برای بهبود زندگی خود *انتخاب هدف* برانگیختن خود* *انجام دادن</string>
    <string name="tutorial_hero_desc">وظایف و عادات روزمره را کارهای روزمره می نامند. زندگی را با کامل کردن انها بسنجید</string>
    <string name="tutorial_challenges_title">خود را به چالش بکشید</string>
    <string name="tutorial_challenges_desc">با چالش های این برنامه به خود انگیزه بدهید و به اهداف خود برسید!</string>
    <string name="title_pick_initial_repeating_quests">چند مورد عادت را برای شروع انتخاب کنید</string>
    <string name="title_pick_initial_quests">چند مورد کار روزمره را برای شروع انتخاب کنید</string>
    <string name="title_fragment_repeating_quests">تکرار کارهای روزمره</string>
    <string name="share">به اشتراک گذاری</string>
    <string name="facebook_app_id">1609232436065758</string>
    <string name="invite_friends">معرفی به دوستان</string>
    <string name="cannot_edit_completed_quests">کارهای روزمره کامل شده قابل تغییر نمی باشد</string>
    <string name="fragment_overview_title">پیش به سوی هدف خود</string>
    <string name="widget_journey_name">اهداف روزمره</string>
    <string name="add">افزودن</string>
    <string name="rate_dialog_initial_title">سلام قهرمان</string>
    <string name="rate_dialog_initial_message">آیا این برنامه را دوست دارید؟</string>
    <string name="dialog_yes">بله</string>
    <string name="dialog_no">خیر</string>
    <string name="dialog_ok">باشه!</string>
    <string name="rate_dialog_never_ask_again">هرگز دوباره پرسیده نشود</string>
    <string name="rate_dialog_rate_title">من هم همینطور</string>
    <string name="rate_dialog_rate_message">در گوگل پلی به این برنامه امتیاز بدهید</string>
    <string name="rate_dialog_feedback_title">لطفا، برای بهبود این برنامه به ما کمک کنید</string>
    <string name="rate_dialog_feedback_send">ارسال</string>
    <string name="rate_dialog_feedback_no">خیر، متشکرم</string>
    <string name="rate_dialog_feedback_thanks">Tمتشکرم! +10 XP فقط شوخی بود ;)</string>
    <string name="quest_saved">کار ذخیره شد</string>
    <string name="help_explain_screen">این صفحه را بشناسیم</string>
    <string name="help_dialog_calendar_title">این تقویم چگونه است؟</string>
    <string name="help_dialog_overview_title">این برنامه به طور کلی چطور دیده می شود؟</string>
    <string name="repeating_quests">برنامه های دوره ای</string>
    <string name="challenges">چالش ها</string>
    <string name="growth">نمودار پیشرفت</string>
    <string name="help_dialog_repeating_quest_text1">بررسی کنید که با کارهای روزمره دوره ای خود چگونه برخود می کنید</string>
    <string name="help_dialog_repeating_quest_duration">چقدر زمان برای این کار روزمره صرف کرده اید</string>
    <string name="help_dialog_repeating_quest_next">کار روزمره بعدی چه زمانی است</string>
    <string name="help_dialog_repeating_quest_streak">Streak counter. The higher your streak, the more XP and coins you will receive when completing the quest.</string>
    <string name="overview">کارهای پیش رو</string>
</resources>