<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.ShapedPreferenceCategory
        android:title="@string/general"
        >

        <!--<io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.ShapedListPreference
            android:defaultValue="fa"
            android:entries="@array/languageNames"
            android:entryValues="@array/languageKeys"
            android:key="AppLanguage"
            android:title="@string/language" />-->

       <!-- <io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.ShapedListPreference
            android:defaultValue="LightTheme"
            android:entries="@array/themeNames"
            android:entryValues="@array/themeKeys"
            android:key="Theme"
            android:summary="@string/select_skin"
            android:title="@string/skin" />-->

        <!--<io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.ShapedCheckBoxPreference
            android:defaultValue="true"
            android:key="PersianDigits"
            android:summary="@string/enable_persian_digits"
            android:title="@string/persian_digits"
            />-->

        <io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.ShapedListPreference
            android:defaultValue="0"
            android:entries="@array/islamicOffsetNames"
            android:entryValues="@array/islamicOffsetKeys"
            android:key="islamicOffset"
            android:summary="@string/islamic_offset_summary"
            android:title="@string/islamic_offset" />

    </io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.ShapedPreferenceCategory>
<!--
    <io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.ShapedPreferenceCategory
        android:title="@string/widget_notification_dashclock">

        &lt;!&ndash;<io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.ShapedCheckBoxPreference
            android:defaultValue="true"
            android:key="NotifyDate"
            android:summary="@string/enable_notify"
            android:title="@string/notify_date" />&ndash;&gt;

      &lt;!&ndash;  <io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.ShapedListPreference
            android:defaultValue="#ffffffff"
            android:entries="@array/colorNames"
            android:entryValues="@array/colorKeys"
            android:key="SelectedWidgetTextColor"
            android:summary="@string/select_widgets_text_color"
            android:title="@string/widget_text_color" />&ndash;&gt;

       &lt;!&ndash; <io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.ShapedCheckBoxPreference
            android:defaultValue="false"
            android:key="IranTime"
            android:summary="@string/showing_iran_time"
            android:title="@string/iran_time" />&ndash;&gt;

        &lt;!&ndash;<io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.ShapedCheckBoxPreference
            android:defaultValue="true"
            android:key="WidgetClock"
            android:summary="@string/showing_clock_on_widget"
            android:title="@string/clock_on_widget" />&ndash;&gt;

        &lt;!&ndash;<io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.ShapedCheckBoxPreference
            android:defaultValue="true"
            android:key="WidgetIn24"
            android:summary="@string/showing_clock_in_24"
            android:title="@string/clock_in_24" />&ndash;&gt;

    </io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.ShapedPreferenceCategory>-->

    <io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.ShapedPreferenceCategory
        android:title="@string/pray_times_calculation_setting">

        <io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.ShapedListPreference
            android:defaultValue="Tehran"
            android:entries="@array/prayMethodsNames"
            android:entryValues="@array/prayMethodsKeys"
            android:key="SelectedPrayTimeMethod"
            android:summary="@string/pray_methods_calculation"
            android:title="@string/pray_methods" />

        <io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.GPSLocationPreference
            android:key="dummy"
            android:summary="@string/gps_location_help"
            android:title="@string/gps_location" />

        <io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.LocationPreference
            android:key="Location"
            android:summary="@string/location_help"
            android:title="@string/location" />

        <io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.AthanNumericPreference
            android:defaultValue="0"
            android:digits="0123456789."
            android:inputType="numberDecimal"
            android:key="Latitude"
            android:title="@string/latitude" />

        <io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.AthanNumericPreference
            android:defaultValue="0"
            android:digits="0123456789."
            android:inputType="numberDecimal"
            android:key="Longitude"
            android:title="@string/longitude" />

        <io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.AthanNumericPreference
            android:defaultValue="0"
            android:digits="0123456789."
            android:inputType="numberDecimal"
            android:key="Altitude"
            android:summary="@string/altitude_praytime"
            android:title="@string/altitude" />

    </io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.ShapedPreferenceCategory>

    <io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.ShapedPreferenceCategory
        android:key="Athan"
        android:title="@string/athan">

        <io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.AthanNumericPreference
            android:inputType="numberSigned"
            android:key="AthanGap"
            android:summary="@string/athan_gap_summary"
            android:title="@string/athan_gap" />

        <io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.PrayerSelectPreference
            android:key="AthanAlarm"
            android:summary="@string/athan_alarm_summary"
            android:title="@string/athan_alarm" />

        <io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.AthanVolumePreference
            android:key="AthanVolume"
            android:summary="@string/athan_volume_summary"
            android:title="@string/athan_volume" />

    </io.ipoli.android.persian.com.chavoosh.persiancalendar.view.preferences.ShapedPreferenceCategory>

</android.support.v7.preference.PreferenceScreen>
