<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/drawer_main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/persian_home"
            android:checked="true"
            android:icon="@drawable/ic_event_white_24dp"
            android:title="تقویم ماهیانه" />
        <item

            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/ic_event_white_24dp"
            android:title="تقویم روزانه" />


        <item
            android:id="@+id/overview"
            android:checked="true"
            android:icon="@drawable/ic_favorite_border_white_24dp"
            android:title="@string/overview" />

        <item
            android:id="@+id/inbox"
            android:checked="false"

            android:icon="@drawable/ic_inbox_white_24dp"
            android:title="@string/inbox" />

        <item
            android:id="@+id/challenges"
            android:checked="false"
            android:icon="@drawable/ic_sword_white_24dp"
            android:title="@string/challenges" />

        <item
            android:id="@+id/repeating_quests"
            android:checked="false"
            android:icon="@drawable/ic_repeat_white_24dp"
            android:title="@string/repeating_quests" />

        <item
            android:id="@+id/growth"
            android:checked="false"
            android:icon="@drawable/ic_growth_white_24dp"
            android:title="@string/growth" />


    </group>

    <group
        android:id="@+id/third_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/contact_us"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_email_white_24dp"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/about_us"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_email_white_24dp"
            android:title="@string/about_us" />
        <item
            android:id="@+id/invite_friends"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_invite_white_24dp"
            android:title="@string/invite_friends" />
        <item
            android:id="@+id/settings"
            android:checkable="false"
            android:checked="false"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />


    </group>
</menu>